--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.application.name=deepseekapidemo
+spring.application.name=OpenRouterAPIDemo
 
-spring.ai.deepseek.base-url=https://api.deepseek.com
-spring.ai.deepseek.api-key=<your-deepseek-api-key>
-spring.ai.deepseek.chat.options.model=deepseek-chat
-spring.ai.deepseek.chat.options.temperature=0.8
+#spring.ai.deepseek.base-url=https://api.deepseek.com
+#spring.ai.deepseek.api-key=<your-deepseek-api-key>
+#spring.ai.deepseek.chat.options.model=deepseek-chat
+#spring.ai.deepseek.chat.options.temperature=0.8
+
+spring.ai.openai.api-key=<your-openrouter-api-key>
+#spring.ai.openai.base-url=https://openrouter.ai/api/v1/chat/completions
+spring.ai.openai.base-url=https://openrouter.ai/api
+# Specify the DeepSeek model you want to use via OpenRouter
+spring.ai.openai.chat.options.model=deepseek/deepseek-chat
